Fix support for GET requests with BODY parameters
