# examples/server/DemoSwagger/Controllers/Dto/JsonInNestedDto.cs
@@ -1,0 +1,11 @@
+﻿using DemoSwagger.FromQueryJson;
+
+namespace DemoSwagger;
+
+public class JsonInNestedDto
+{
+    public string Test { get; set; }
+
+    [FromJsonQuery]
+    public DummyDto Dummy { get; set; }
+}
